[project]
name = "lastools"
version = "0.1.0"
description = "A modular deep learning pruning and training toolkit"
requires-python = ">=3.8"
dependencies = ["torch>=1.8.0", "torchvision>=0.9.0", "numpy>=1.23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
